# solfunmeme-model-builder-quiz

./: .gitignore  Cargo.toml  README.md  term_embeddings.json  test_answer_curl.sh
.gemini/: GEMINI.md
docs/: change_request.md  how_to_test.md  how_to_use.md  ontology_properties_for_quiz.md
docs/sops/: branching_strategy_sop.md  dependency_management_sop.md  documentation_management_sop.md  gemini_cli_change_management_sop.md  gemini_cli_model_update_sop.md  quiz_server_sop.md  ragit_embedding_quiz_sop.md  session_recovery_sop.md
docs/tutorial/: 001_noob.md
src/: api_handlers.rs  api_types.rs  cli.rs  cli_run.rs  command_cli.rs  embedding_cli.rs  handlers.rs  main.rs  model.rs~  model_core.rs  server.rs
src/cli_commands/: answer.rs  delete.rs  insert.rs  list_terms.rs  mod.rs  query.rs  quiz.rs  start.rs  stop.rs  take.rs  update.rs
src/handlers/: handle_add_vector_command.rs  handle_answer_command.rs  handle_query_command.rs  handle_quiz_command.rs  match_prime_pattern.rs  mod.rs
src/term_quiz_master/: mod.rs  quiz_logic.rs  term_entry.rs
